DDD News						-*- text -*-
********

DDD 3.2 [in development]
========================

DDD 3.2 brings not much yet.

- Breakpoint commands are also supported for DBX, Perl, and XDB.
- `Breakpoint Properties', `Define Command', and `Debugger Settings'
  have an `Apply' button that applies changes to text fields.
- In TTY mode, you can edit and complete the command line as in GDB.
- [Perl] DDD supports temporary breakpoints in Perl.
- [GDB] DDD saves the GDB source directory path with the current session.
- [JDB] DDD saves the JDB class path only with the current session.

DDD 3.2 also incorporates all changes listed below.


DDD 3.1.4 [in development]
==========================

DDD 3.1.4 fixes more minor bugs in DDD 3.1.

- Changing the GDB display radix automatically refreshes displayed values.
- If you have Java classes in `./foo/bar' and `bar' is a symlink back
  to `.', DDD no longer searches `./foo/bar/foo/bar/...' and deeper.

There are no new features in DDD 3.1.4.  You don't need to upgrade
unless you suffer from one of these bugs.


DDD 3.1.3
=========

DDD 3.1.3 fixes more minor bugs in DDD 3.1.

- Invoking DDD with a non-existing file name works.
- Displays disabled by GDB are created and refreshed properly.
- [HP-UX, SGI] Perl no longer exits upon start-up.
- [LessTif] Worked around a LessTif bug that made DDD insensitive to input.
- [Build] New configuration files from Autoconf 2.13.

There are no new features in DDD 3.1.3.  You don't need to upgrade
unless you suffer from one of these bugs.


DDD 3.1.2
=========

DDD 3.1.2 fixes more minor bugs in DDD 3.1, most of them related to Perl:

- Show/Hide works properly with deeply nested substructures.
- Struct members whose name starts with 'END' are properly handled.
- Starting DDD with `no command tool' set in `~/.ddd/init' works.
- Console input after `print FUNCTION()' is passed to FUNCTION.
- [Perl] Arguments of `Program->Run' are processed correctly.