@@ -34,7 +34,10 @@
 char cxxtest_rcsid[] =
     "$Id$";
 
+#if HAVE_CONFIG_H
 #include "config.h"
+#endif
+
 #include "bool.h"
 
 #include <iostream.h>
@@ -401,8 +404,9 @@ void plot_test()
 {
     static int ir[100];
 
-    for (int k = 0; k < numbers(ir); k++)
-	ir[k] = rnd(100);
+    int i;
+    for (i = 0; i < numbers(ir); i++)
+	ir[i] = rnd(100);
 
     shell_sort(ir, numbers(ir));
 
@@ -411,11 +415,20 @@ void plot_test()
     static double dr[10][100];
     double pi = 3.14159265358979323846;
 
-    for (int i = 0; i < numbers(dr); i++)
-	for (int j = 0; j < numbers(dr[0]); j++)
+    int j;
+    for (i = 0; i < numbers(dr); i++)
+	for (j = 0; j < numbers(dr[0]); j++)
 	    dr[i][j] = i * i * sin(j * 2 * pi / numbers(dr[0]) * 3);
 
     (void) dr;			// Plot this
+
+    int **array = new int *[10];
+    for (i = 0; i < 10; i++)
+    {
+	array[i] = new int[10];
+	for (j = 0; j < 10; j++)
+	    array[i][j] = i * j;
+    }
 }
 
 //--------------------------------------------------------------------------
